--- a/src/app/components/item/search-item/search-item.component.html
+++ b/src/app/components/item/search-item/search-item.component.html
@@ -1,8 +1,7 @@
-<div class="search-container">
-  <mat-form-field appearance="outline" class="full-width">
-    <mat-label>Trouver votre article</mat-label>
-    <input matInput #searchInput (input)="search(searchInput.value)" placeholder="Veuillez écrire l'article recherché">
-    <button matSuffix mat-icon-button aria-label="Rechercher" (click)="searchInput.value = ''">
+<div class="search-container flex justify-center">
+  <label class="relative max-w-full w-2/3">
+    <input matInput #searchInput (input)="search(searchInput.value)" placeholder="Veuillez écrire l'article recherché" class="input-field w-full">
+    <button mat-icon-button aria-label="Trouver votre article" (click)="searchInput.value = ''" class="search-button">
       <ng-container *ngIf="!searchInput.value">
         <mat-icon>search</mat-icon>
       </ng-container>
@@ -10,5 +9,6 @@
         <mat-icon>close</mat-icon>
       </ng-container>
     </button>
-  </mat-form-field>
+    <!-- <button class="px-4 py-2 bg-indigo-500 text-white rounded-md hover:bg-indigo-600">Se connecter</button> -->
+  </label>
 </div>
