--- a/src/app/components/nav/item-category-nav/item-category-nav.component.html
+++ b/src/app/components/nav/item-category-nav/item-category-nav.component.html
@@ -1,4 +1,4 @@
-<nav class="w-full bg-gray-100">
+<nav class="w-full bg-gray-100" class="sticky">
   <div class="container mx-auto">
     <ul class="flex justify-between">
       <li class="px-4 py-2 bg-white border-b-4 border-indigo-500 font-medium">
