--- a/src/app/components/section/item/list-item/list-item.component.css
+++ b/src/app/components/section/item/list-item/list-item.component.css
@@ -12,9 +12,6 @@
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   flex-basis: calc(25% - 2rem);
-  margin-bottom: 2rem;
-  margin-right: 1rem;
-  margin-left: 1rem;
   height: 100%;
   cursor: pointer;
 }
@@ -23,10 +20,6 @@
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
   transform: scale(1.11);
   z-index: 1;
-}
-
-mat-card-header {
-  padding: 1rem;
 }
 
 mat-card-image {
@@ -39,21 +32,21 @@ mat-card-image {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding: 0.55rem 1rem;
+}
+
+.item-description {
+  cursor: pointer;
 }
 
 .rating {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 8px;
-  margin-bottom: 8px;
 }
 
 mat-icon {
   font-size: 1.2rem;
   color: rgba(0, 0, 0, 0.4);
-  margin-right: 4px;
 }
 
 .favourite {
@@ -62,4 +55,8 @@ mat-icon {
 
 .yellow-star {
   color: gold;
+}
+
+mat-card-title {
+  margin: 0;
 }
